# MindGraph

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
docs/: roadmap.md  todo.md  设计文档.md
docs/design/: Mind Graph.md  Mix Editor.md
script/: upx.js
src/: App.css  App.scss  App.tsx  AppContext.tsx  FnBar.css  Menu.css  Menu.tsx  MenuObject.css  MenuObject.tsx  MindNode.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: api.rs  app_state.rs  mod.rs
src-tauri/src/app/api/: mod.rs
src-tauri/src/app/api/mg/: index.rs  mod.rs  node.rs
src-tauri/src/mg/: mg_state.rs  mod.rs
src-tauri/src/mg/meta/: entity.rs  init.rs  mod.rs
src-tauri/src/mg/node/: api.rs  entity.rs  init.rs  mod.rs
src-tauri/src/node/: entity.rs  mod.rs  sql.rs
src-tauri/src/utils/: mod.rs  path.rs  types.rs
src/api/: index.ts  mg.ts
src/api/app/: index.ts
src/api/app/mg/: mg.ts  node.ts
src/api/client/: tauri.ts  type.ts
src/api/mg/: node.ts
src/api/types/: id.ts  mg.ts  node.ts
src/common/: async.ts  dom.ts  math.ts  signal.ts  types.ts  utils.scss  var.css  var.scss
src/components/base/: Accordion.scss  Accordion.tsx  Icon.tsx  List.scss  List.tsx
src/components/base/accordion/: Accordion.css  Accordion.scss  Accordion.tsx
src/components/base/block/: Block.tsx  Flex.tsx
src/components/base/button/: Button.css  Button.scss  Button.tsx
src/components/base/divider/: Divider.css  Divider.scss  Divider.tsx
src/components/base/list/: List.css  List.scss  List.tsx
src/components/base/menu/: Menu.css  Menu.scss  Menu.tsx
src/components/base/mix_editor/: Area.ts  AreaContext.ts  MixEditor.ts  plugin.ts  renderer.tsx  root.ts  save.ts  selection.ts
src/components/base/mix_editor/docs/: 左移的流程.md  选区的定义.md
src/components/base/mix_editor/event/: BreakLine.ts  CaretMoveEnter.ts  Combine.ts  Delete.ts  Enter.ts  Input.ts  index.ts
src/components/base/mix_editor/plugins/: Paragraph.css  bold.tsx  paragraph.tsx  text.tsx
src/components/base/mix_editor/renderer/: CaretRenderer.css  CaretRenderer.tsx  MixEditorRenderer.tsx  text_caret.tsx
src/components/base/mix_editor/utils/: area.ts  types.ts
src/components/base/right-click/: RightClick.scss  RightClick.tsx
src/components/canvas/: Canvas.tsx  CanvasRenderer.tsx  CanvasState.tsx  MindNodeContentRenderer.tsx  MindNodeRenderer.scss  MindNodeRenderer.tsx
src/components/framework/: Framework.tsx
src/components/framework/header/: Header.css  Header.scss  Header.tsx
src/components/menu/: FnBar.tsx  Menu.scss  Menu.tsx  MenuObject.css  MenuObject.scss  MenuObject.tsx  TopBar.scss  TopBar.tsx
src/components/pages/: router.tsx
src/components/pages/canvas/: Canvas.tsx  CanvasPage.css  CanvasPage.tsx  CanvasRenderer.css  CanvasRenderer.scss  CanvasRenderer.tsx  CanvasState.tsx  MindNodeContentRenderer.tsx  MindNodeHelper.tsx  MindNodeRenderer.scss  MindNodeRenderer.tsx
src/components/pages/canvas/doc/: DocCanvas.tsx  DocCanvasRenderer.tsx
src/components/pages/canvas/mind_node/: ContentRenderer.tsx  Renderer.css  Renderer.tsx
src/components/pages/canvas/node/: DraggingRectHelper.tsx  NodeCanvas.css  NodeCanvas.ts  NodeCanvasRenderer.tsx
src/components/pages/canvas/node/handler/: keyboard.ts  mouse.ts
src/components/pages/canvas/node/renderer/: Content.tsx  Editor.tsx  Node.css  Node.tsx  RedrawHelper.tsx
src/components/pages/canvas/utils/: Helper.tsx  NodeContext.tsx  RendererContext.tsx  dragging_rect.ts
src/components/pages/portal/: DisplayRenderer.css  DisplayRenderer.scss  DisplayRenderer.tsx  PortalPage.css  PortalPage.tsx  portal.scss  portal.tsx
src/domain/: MindNode.ts
