[package]
name = "mind_graph"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"

rustls-pemfile = { version = "2.0.0-alpha" }
rustls = { version = "0.22.0-alpha" }
tokio-rustls = { version = "0.25.0-alpha" }
webpki-roots = { version = "0.26.0-alpha" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }

dirs = "5"
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev]
debug = 0
strip = "debuginfo"
incremental = true # Compile your binary in smaller steps.

[profile.release]
panic = "abort" # 去掉昂贵的 panic 清理逻辑
codegen-units = 1 # 依次编译 crates，以便编译器可以更好地优化
lto = true # 启用优化链接
opt-level = "s" # 优化二进制大小
strip = true # 删除调试符号
# rustflags = ["-Cdebuginfo=0"]
# trim-paths = "all" # 清理路径信息

[lib]
name = "mind_graph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
